--- a/proyecto_reciclaje/reciclaje/static/css/styles.css
+++ b/proyecto_reciclaje/reciclaje/static/css/styles.css
@@ -200,10 +200,9 @@ select {
 
 /* Estilos de mapa (registro reciclaje) */
 .map-container {
+  margin-top: 0%;
   width: 100%;
   height: 100vh;
-  margin-top: 2em;
-  border: #030303;
 }
 
 /* Estilos de modal (registro reciclaje) */
